--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,11 @@ img {
 /* main-section-1 */
 
 .effective {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-11.jpg);
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     padding: 188px 0;
     background-color: #2e2f42;
 }
@@ -149,6 +154,7 @@ img {
 }
 
 .effective-button { 
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-left: auto;
     margin-right: auto;
     display: block;
