--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,7 @@ img {
 }
 
 .effective-button { 
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-left: auto;
     margin-right: auto;
     display: block;
