--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,17 @@ img {
     width: calc((100% - 72px) / 4);
 }
 
+.success-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    margin-bottom: 8px;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    background-color: #F4F4FD;
+}
+
 .success-title {
     margin-bottom: 8px;
     font-weight: 500;
