--- a/css/styles.css
+++ b/css/styles.css
@@ -256,6 +256,7 @@ img {
 }
 
 .team-member {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
     background-color: #FFFFFF;
@@ -285,6 +286,16 @@ img {
     color: #434455;
 }
 
+.team-social {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.team-social-item {
+    width: 40px;
+    height: 40px;
+}
 /* main-section-4 */
 
 .portfolio {
