--- a/css/styles.css
+++ b/css/styles.css
@@ -350,6 +350,15 @@ img {
 
 /* footer */
 
+.footer-container {
+    display: flex; 
+    align-items: baseline;
+}
+
+.footer-logo-container {
+    margin-right: 120px
+}
+
 .page-footer {
     background-color: #2e2f42;
     padding: 100px 0;
@@ -370,4 +379,13 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #F4F4FD;
+}
+
+.footer-social-text {
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: css #F4F4FD;
 }
