--- a/css/styles.css
+++ b/css/styles.css
@@ -347,6 +347,7 @@ img {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+
 .portfolio-member:hover {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -358,19 +359,25 @@ img {
     overflow: hidden;
 }
 
-.portfolio-member-item-text {
-    top: 0%;
+.portfolio-member:hover .overlay-text {
+    transform: translateY(0%);
+}
+
+.overlay-text{
+    position: absolute;
+    top: 0;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
     padding: 40px 32px;
-    background-color: #4d5ae5;
     height: 100%;
     width: 100%;
+    background-color: #4d5ae5;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .portfolio-member-info {
     padding: 32px 16px;
@@ -395,9 +402,6 @@ img {
     color: #434455;
 }
 
-.portfolio-member-text:hover {
-    transform: translateY(0%);
-}
 
 /* footer */
 
