--- a/css/styles.css
+++ b/css/styles.css
@@ -402,7 +402,6 @@ img {
     color: #434455;
 }
 
-
 /* footer */
 
 .footer-container {
@@ -442,5 +441,35 @@ img {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #F4F4FD;
+    color: #FFFFFF
+}
+
+.footer-social-list {
+    display: flex;
+    gap: 24px;
+}
+
+.footer-social-item {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-social-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+    background-color: #31d0aa;
+}
+
+.footer-social-icon {
+    fill: #f4f4fd;
 }
