--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,8 @@ img {
     background-position: center;
     background-size: cover;
     padding: 188px 0;
+    margin-right: auto;  
+    margin-left: auto; 
     background-color: #2e2f42;
 }
 
@@ -289,6 +291,7 @@ img {
 .team-social {
     display: flex;
     justify-content: center;
+    margin-top: 8px;
     gap: 24px;
 }
 
